--- a/public/menu.html
+++ b/public/menu.html
@@ -7,120 +7,137 @@
 <body>
 
 <style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  .container {
-    width: 100vw;  /* 기본적으로 너비 50% */
-    height: 100vh;
-    background-color: darkkhaki;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: width 0.3s ease-in-out; /* 부드러운 전환 효과 */
-  }
-
-  /* 📌 모바일(세로 모드)에서 전체 너비 차지 */
-  @media screen and (max-width: 768px) {
-    .container {
-      width: 100vw;
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
     }
-  }
 
-  .master {
-    width: 30vw;
-    height: 100vh;
-    background-color: cornsilk;
-    display: flex;
-  }
-  .detail {
-    width: 70vw;
-    height: 100vh;
-    background-color: gold;
-  }
+    .container {
+        width: 100vw;  /* 기본적으로 너비 50% */
+        height: 100vh;
+        background-color: darkkhaki;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        transition: width 0.3s ease-in-out; /* 부드러운 전환 효과 */
+    }
 
-  .menuList {
-      margin-top: 5em;
-  }
+    /* 📌 모바일(세로 모드)에서 전체 너비 차지 */
+    @media screen and (max-width: 768px) {
+        .container {
+            width: 100vw;
+        }
+    }
 
-  .menuList li {
-      list-style: none;
-      margin: 2em;
-      border: 1px solid blue;
-      padding: 2em;
-      background-color: white;
-      border-radius: 5px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 아래쪽 그림자 */
-  }
+    .master {
+        width: 30vw;
+        height: 100vh;
+        background-color: cornsilk;
+        display: flex;
+    }
+    .detail {
+        width: 70vw;
+        height: 100vh;
+        background-color: gold;
+    }
+
+    .menuList {
+        margin-top: 5em;
+    }
+
+    .menuList li {
+        list-style: none;
+        margin: 2em;
+        border: 1px solid blue;
+        padding: 2em;
+        background-color: white;
+        border-radius: 5px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* 아래쪽 그림자 */
+    }
 
 </style>
 
 <div class="container">
-  <div class="master">
-    <div>MENUS</div>
-    <div>
-        <ul class="menuList">
+    <div class="master">
+        <div>MENUS</div>
+        <div>
+            <ul class="menuList">
 
-        </ul>
+            </ul>
+        </div>
     </div>
-  </div>
-  <div class="detail">
-    Detail
-  </div>
+    <div class="detail">
+        Detail <a href="tel:01012345678">전화 걸기</a>
+        <div>
+            MNO <input type="text" name="mno" readonly>
+        </div>
+        <div>
+            MNAME <input type="text" name="mname" readonly>
+        </div>
+    </div>
 </div>
 
 
 <script>
 
-  const menus = [
-    {mno: 1, mname: 'Americano', price:4000, img1:'1.jpg', img2:'2.jpg', cat:'coffee'},
-    {mno: 2, mname: 'Latte', price:4500, img1:'2.jpg', img2:'2.jpg', cat:'coffee'},
-    {mno: 3, mname: 'Red Tea', price:5000, img1:'3.jpg', img2:'2.jpg', cat:'coffee'},
-    {mno: 4, mname: 'Cheese Cake', price:7000, img1:'4.jpg', img2:'2.jpg', cat:'cake'},
-    {mno: 5, mname: 'Apple Chip', price:2000, img1:'5.jpg', img2:'2.jpg', cat:'cookie'},
-    {mno: 6, mname: 'Financier', price:3000, img1:'6.jpg', img2:'2.jpg', cat:'cookie'},
-  ]
+    const menus = [
+        {mno: 1, mname: 'Americano', price:4000, img1:'1.jpg', img2:'2.jpg', cat:'coffee'},
+        {mno: 2, mname: 'Latte', price:4500, img1:'2.jpg', img2:'2.jpg', cat:'coffee'},
+        {mno: 3, mname: 'Red Tea', price:5000, img1:'3.jpg', img2:'2.jpg', cat:'coffee'},
+        {mno: 4, mname: 'Cheese Cake', price:7000, img1:'4.jpg', img2:'2.jpg', cat:'cake'},
+        {mno: 5, mname: 'Apple Chip', price:2000, img1:'5.jpg', img2:'2.jpg', cat:'cookie'},
+        {mno: 6, mname: 'Financier', price:3000, img1:'6.jpg', img2:'2.jpg', cat:'cookie'},
+    ]
 
-  function makeMenuList() {
+    function makeMenuList() {
 
-      let str = ''
+        let str = ''
 
-      for (let i = 0; i < menus.length ; i++) {
-          const menu = menus[i]
-          console.dir(menu)
+        for (let i = 0; i < menus.length ; i++) {
+            const menu = menus[i]
+            console.dir(menu)
 
-          const {mno, mname, price} = menu //구조 분해 할당
+            const {mno, mname, price} = menu //구조 분해 할당
 
-          console.log(mno, mname, price)
-          console.log("----------------")
+            console.log(mno, mname, price)
+            console.log("----------------")
 
-          str += `<li data-mno="${mno}">${mno} --- ${mname} --- ${price}</li>`
-      }//end for
+            str += `<li data-mno="${mno}">${mno} --- ${mname} --- ${price}</li>`
+        }//end for
 
-      document.querySelector(".menuList").innerHTML = str
+        document.querySelector(".menuList").innerHTML = str
 
-  }
+    }
 
-  makeMenuList()
+    makeMenuList()
 
-  document.querySelector(".menuList").addEventListener("click", e => {
+    document.querySelector(".menuList").addEventListener("click", e => {
 
-      const target = e.target
+        const target = e.target
+        if(!target.dataset.mno){
+            return
+        }
+        const mno = target.dataset.mno
 
-      if(!target.dataset.mno){
-          return
-      }
+        const targetMenu = menus.findLast( m => m.mno === Number(mno))
 
-      const mno = target.dataset.mno
+        console.log(targetMenu)
+        //document.querySelector(".detail").innerHTML = `<h1>${targetMenu.mno}</h1>`
+        printMenu(targetMenu)
 
-      alert(mno)
+    }, false)
+    const mnoInput = document.querySelector(".detail input[name='mno']")
+    const mnameInput = document.querySelector(".detail input[name='mname']")
+    const priceInput = document.querySelector(".detail input[name='price']")
 
+    function printMenu(menu) {
+        console.log(menu)
+        mnoInput.value = menu.mno
+        mnameInput.value = menu.mname
+        priceInput.value = menu.price
+    }
 
-
-  }, false)
 
 </script>
 
